...
    <string name="textViewSubmitted">Submitted!</string>
    <string name="taskMasterUpdate">My Tasks</string>
    <string name="codeChallenge">Code Challenge</string>
    <string name="cC">CC</string>
    <string name="labTask">Lab</string>
    <string name="restTask">Rest</string>
    <string name="settingBtn">User settings</string>
    <string name="userName">Username</string>
    <string name="usernameEditText">Input Username</string>
    <string name="save">Save</string>
    <string name="input">Input</string>
    <string name="no_input">No Input</string>
    <string name="taskOne">Task 1</string>
    <string name="taskTwo">Task 2</string>
    <string name="taskThree">Task 3</string>
    <string name="taskDetails">"Task Details "</string>
...
